--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,9 @@
     padding-right: var(--space-around);
 }
 
+#root {
+    padding: var(--space-around);
+}
 
 /* HOME-PAGE */
 
@@ -50,6 +53,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
     margin-top: 20px;
+    margin-bottom: 100px;
 }
 
 .scheda .immagine {
@@ -62,6 +66,11 @@
     height: 100%;
     object-fit: cover;
     border-radius: 5px;
+}
+
+.scheda .info {
+    display: flex;
+    flex-direction: column;
 }
 
 .scheda .info #number{
@@ -82,10 +91,40 @@
 
 .scheda .info .abilita {
     font-family: "Flexo-Medium", arial, sans-serif;
-    border-radius: 3px;
     line-height: 18px;
-    max-width: 110px;
-    width: 37%;
+    width: 100%;
     font-size: 11px;
+    display: flex;
+    gap: 5px;
+}
+
+.single-type {
+    border-radius: 6px;
+    width: 55px;
+    display: flex;
+    justify-content: center;
+}
+
+.box-button {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box-button .add-pokemon {
+    font-size: 100%;
+    font-family: "Flexo-Demi", arial, sans-serif;
+    border-radius: 5px;
+    line-height: 125%;
     text-align: center;
+    border: none;
+    padding: 15px 40px;
+    cursor: pointer;
+    background-color: #30a7d7;
+    color: #fff;
+}
+
+.box-button .add-pokemon:hover {
+    background-color: #1b82b1
 }
