--- a/src/style.css
+++ b/src/style.css
@@ -34,7 +34,7 @@
 /* GENERAL */
 
 :root {
-    --space-around: 5%;
+    --space-around: 3%;
 }
 
 .wrapper {
@@ -51,7 +51,7 @@
 .griglia-box {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-gap: 20px;
+    grid-gap: 25px;
     margin-top: 20px;
     margin-bottom: 100px;
 }
@@ -61,12 +61,17 @@
     text-decoration: none;
 }
 
-.scheda .immagine {
+.scheda:hover {
+    transition: all 300ms;
+    transform: scale(1.05);
+}
+
+.immagine {
     background-color: #F2F2F2;
     border-radius: 5px
 }
 
-.scheda .immagine img {
+.immagine img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -78,7 +83,7 @@
     flex-direction: column;
 }
 
-.scheda .info #number{
+#number{
     margin: 0;
     color: #919191;
     font-size: 80%;
@@ -86,10 +91,10 @@
     font-family: "Flexo-Bold", arial, sans-serif;
 }
 
-.scheda .info #name {
+#name {
     font-family: "Flexo-Demi", arial, sans-serif;
     color: #313131;
-    text-transform: none;
+    text-transform: capitalize;
     font-size: 145%;
     margin-bottom: 5px;
 }
@@ -132,4 +137,128 @@
 
 .box-button .add-pokemon:hover {
     background-color: #1b82b1
+}
+
+@media screen and (max-width: 1123px){
+    .griglia-box {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media screen and (max-width: 767px){
+    .griglia-box {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 510px){
+    .griglia-box {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media screen and (max-width: 310px){
+    .box-button .add-pokemon {
+        line-height: 100%;
+        padding: 13px 30px;
+    }
+}
+
+
+/* SINGLE-POKEMON */
+
+.content-single-pokemon {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.single-pokemon {
+    max-width: 950px;
+    width: 100%;
+}
+
+.box-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box-title #name {
+    margin: 0;
+    font-size: 225%;
+    padding-right: 20px;
+}
+
+.box-title #number {
+    font-size: 225%;
+    color: #616161;
+    font-weight: normal;
+    font-family: "Flexo-Medium", arial, sans-serif;
+}
+
+.box-info {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    margin-top: 60px;
+}
+
+.box-info .col-1 {
+    margin-right: 10px;
+}
+
+.box-info .col-2 {
+    margin-left: 10px;
+}
+
+.box-info .col-1, .box-info .col-2 {
+    width: 50%;
+    position: relative;
+}
+
+.box-info .immagine {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.box-info .immagine img{
+    width: 80%;
+    height: auto;
+}
+
+.box-info .dettaglio {
+    background-color: #a4a4a4;
+    border-radius: 10px;
+    width: 100%;
+    font-family: "Flexo-Medium", arial, sans-serif;
+    color: #313131;
+    padding: 5px 17px;
+    margin-top: 20px;
+    box-sizing: border-box;
+}
+
+.box-info .col-2 .caratteristiche {
+    background-color: #30a7d7;
+    color: #fff;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    padding: 20px 30px;
+    font-family: "Flexo-Medium", arial, sans-serif;
+    font-weight: normal;
+}
+
+.box-info .caratteristiche p {
+    color: #fff;
+    font-size: 100%;
+    text-transform: capitalize;
+}
+
+.box-info .caratteristiche h4 {
+    color: #212121;
+    font-size: 125%;
+    margin: 0;
 }
