--- a/src/style.css
+++ b/src/style.css
@@ -30,7 +30,6 @@
     url("https://db.onlinewebfonts.com/t/d2d21cf0ee4c1d969d8a4dccc587ab26.svg#Flexo-Medium")format("svg");
 }
 
-
 /* GENERAL */
 
 :root {
@@ -48,12 +47,22 @@
 
 /* HOME-PAGE */
 
+.home-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    flex-direction: column;
+}
+
 .griglia-box {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 25px;
     margin-top: 20px;
     margin-bottom: 100px;
+    max-width: 1000px;
+    width: 100%;
 }
 
 .scheda {
@@ -99,7 +108,7 @@
     margin-bottom: 5px;
 }
 
-.scheda .info .abilita {
+.abilita {
     font-family: "Flexo-Medium", arial, sans-serif;
     line-height: 18px;
     width: 100%;
@@ -139,21 +148,31 @@
     background-color: #1b82b1
 }
 
-@media screen and (max-width: 1123px){
+@media screen and (max-width: 825px){
     .griglia-box {
         grid-template-columns: repeat(3, 1fr);
     }
 }
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 600px){
     .griglia-box {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
-@media screen and (max-width: 510px){
+@media screen and (max-width: 425px){
     .griglia-box {
         grid-template-columns: repeat(1, 1fr);
+    }
+
+    .immagine img {
+        width: 60%;
+    }
+
+    .immagine {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
@@ -202,14 +221,7 @@
     display: flex;
     flex-direction: row;
     margin-top: 60px;
-}
-
-.box-info .col-1 {
-    margin-right: 10px;
-}
-
-.box-info .col-2 {
-    margin-left: 10px;
+    gap: 40px;
 }
 
 .box-info .col-1, .box-info .col-2 {
@@ -246,7 +258,7 @@
     border-radius: 10px;
     display: flex;
     flex-direction: row;
-    padding: 20px 30px;
+    padding: 20px 30px 30px 30px;
     font-family: "Flexo-Medium", arial, sans-serif;
     font-weight: normal;
 }
@@ -261,4 +273,44 @@
     color: #212121;
     font-size: 125%;
     margin: 0;
+}
+
+#gender #img {
+    display: flex;
+}
+
+#gender #img .svg {
+    padding-right: 20px;
+}
+
+#gender #img .svg.true{
+    display: block;
+}
+
+#gender #img .svg.false{
+    display: none;
+}
+
+#frase, .tipo, .debolezze {
+    font-family: "Flexo-Medium", arial, sans-serif;
+    color: #212121;
+    font-size: 112.5%;
+    line-height: 150%;
+    margin: 20px 0px;
+}
+
+.tipo .abilita .single-type, .debolezze .single-type{
+    width: 30%;
+    height: 35px;
+    align-items: center;
+    width: 100%;
+}
+
+.tipo .abilita, .debolezze .abilita {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    gap: 10px;
+    font-size: 15px;
+    padding-top: 10px;
 }
