--- a/src/style.css
+++ b/src/style.css
@@ -148,8 +148,11 @@ li {
 .box-button {
     width: 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
+}
+
+.home-page .box-button{
+    justify-content: center;
 }
 
 .button {
@@ -381,4 +384,33 @@ li {
     display: flex;
     flex-direction: row;
     gap: 10px;
+    justify-content: space-evenly;
+}
+
+.table h6 {
+    text-align: center;
+    width: 60px;
+    margin: 10px 0px;
+}
+
+.table ul {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    width: 65px;
+    margin: 0;
+}
+
+.table li {
+    background-color: white;
+    height: 5px;
+    width: 100%;
+    border: solid 1px white;
+    padding-bottom: 0;
+    margin-bottom: 6px;
+    box-sizing: border-box;
+}
+
+.table li.active {
+    background-color: #1b82b1;
 }
