--- a/src/style.css
+++ b/src/style.css
@@ -91,6 +91,26 @@ li {
     text-decoration: none;
 }
 
+@keyframes flash {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0.5;
+    }
+}
+
+.scheda.loading {
+    height: 326px;
+}
+
+.scheda.loading .immagine {
+    
+    width: 100%;
+    animation: flash 1s infinite alternate;
+}
+
 .scheda:hover {
     transition: all 300ms;
     transform: scale(1.05);
@@ -98,7 +118,8 @@ li {
 
 .immagine {
     background-color: #F2F2F2;
-    border-radius: 5px
+    border-radius: 5px;
+    height: 235px;
 }
 
 .immagine img {
