--- a/src/style.css
+++ b/src/style.css
@@ -106,7 +106,6 @@ li {
 }
 
 .scheda.loading .immagine {
-    
     width: 100%;
     animation: flash 1s infinite alternate;
 }
@@ -119,13 +118,13 @@ li {
 .immagine {
     background-color: #F2F2F2;
     border-radius: 5px;
-    height: 235px;
+    height: 240px;
 }
 
 .immagine img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 5px;
 }
 
@@ -297,7 +296,7 @@ li {
     font-family: "Flexo-Medium", arial, sans-serif;
     color: #313131;
     padding: 5px 17px;
-    margin-top: 20px;
+    margin-top: 100px;
     box-sizing: border-box;
 }
 
@@ -366,6 +365,7 @@ li {
 
 #abilita .single-type {
     justify-content: flex-start;
+    width: 100%;
 }
 
 .navigation {
